_includes/css/text.css
* {
    color: var(--text-colour);
}

body {
    font-family: "Open Sans", sans-serif;
}

p {
    margin-bottom: 20px;

    font-family: "Open Sans", sans-serif;
    font-size: 12pt;
    font-weight: normal;

    line-height: 20pt;
}

a {
    font-family: inherit;
    font-size: inherit;
    font-weight: inherit;
    
    text-decoration: underline;
}

h1, h2, h3, h4, h5, h6 {
    margin-top: 0px;
    margin-bottom: 3px;

    font-family: "Libre Baskerville", serif;
    font-weight: normal;
}

h1 {
    font-size: 18pt;
}

h2 {
    font-size: 15pt;
}

h3 {
    font-size: 14pt;
}

h4 {
    font-size: 13pt;
}

h5 {
    font-size: 12pt;
}

h6 {
    font-size: 12pt;
}

